check if github workflow is working

--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,29 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
-    "keywords": [
-        ":vendor_name",
+    "name": "fintechsystems/payfast-onsite-subscriptions",
+    "description": "This is my package payfast-onsite-subscriptions",
+    "keywords": [        
         "laravel",
-        ":package_slug"
+        "payfast",
+        "subscription-billing"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/fintechsystems/payfast-onsite-subscriptions",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Eugene van der Merwe",
+            "email": "eugenevdm@gmail.com",
             "role": "Developer"
         }
     ],
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "FintechSystems\\VirtualminApi\\": "src/"            
+            "FintechSystems\\Payfast\\": "src/"            
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "FintechSystems\\VirtualminApi\\Tests\\": "tests"
+            "Tests\\": "tests/",
+            "FintechSystems\\Payfast\\Tests\\": "tests"
         }
     },
     "require": {
@@ -40,10 +41,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "FintechSystems\\WhmcsApi\\WhmcsApiServiceProvider"
+                "FintechSystems\\Payfast\\PayfastServiceProvider"
             ],
             "aliases": {
-                "VirtualminApi": "FintechSystems\\WhmcsApi\\Facades\\WhmcsApi"
+                "payfast": "FintechSystems\\Payfast\\Facades\\Payfast"
             }
         }
     }
