four tests working

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-WHMCS_URL=
-WHMCS_API_IDENTIFIER=
-WHMCS_API_SECRET=
-WHMCS_API_MODE=
+PAYFAST_MERCHANT_ID=10004002
+PAYFAST_MERCHANT_KEY=q1cd2rdny4a53
+PAYFAST_PASSPHRASE=payfast
+PAYFAST_TESTMODE=true
