--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-WHMCS_URL=whmcs.example.com
-WHMCS_API_IDENTIFIER=
-WHMCS_API_SECRET=
-WHMCS_API_MODE=
+PAYFAST_MERCHANT_ID=
+PAYFAST_MERCHANT_KEY=
+PAYFAST_PASSPHRASE=
+PAYFAST_TESTMODE=
