--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-PAYFAST_MERCHANT_ID=
-PAYFAST_MERCHANT_KEY=
-PAYFAST_PASSPHRASE=
-PAYFAST_TESTMODE=
+PAYFAST_MERCHANT_ID=11
+PAYFAST_MERCHANT_KEY=22
+PAYFAST_PASSPHRASE=33
+PAYFAST_TESTMODE=true
