--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,9 @@
         "symfony/dotenv": "^5.3",
         "illuminate/contracts": "^8.37",
         "guzzlehttp/guzzle": "^7.4",
-        "livewire/livewire": "^2.10",
-        "moneyphp/money": "^4.0"
+        "livewire/livewire": "^2.8",
+        "moneyphp/money": "^4.0",
+        "spatie/ray": "^1.34"
     },
     "require-dev": {  
         "nunomaduro/collision": "^5.3",      
