--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 PAYFAST_MERCHANT_ID=10004002
 PAYFAST_MERCHANT_KEY=q1cd2rdny4a53
 PAYFAST_PASSPHRASE=payfast
+
 PAYFAST_TESTMODE=true
+
+PAYFAST_MERCHANT_ID_TEST=
+PAYFAST_MERCHANT_KEY_TEST=
+PAYFAST_PASSPHRASE_TEST=
+
+PAYFAST_CALLBACK_URL_TEST=https://your-local-app.eu-1.sharedwithexpose.com
