--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ PAYFAST_MERCHANT_KEY_TEST=
 PAYFAST_PASSPHRASE_TEST=
 
 PAYFAST_CALLBACK_URL_TEST=https://your-local-app.eu-1.sharedwithexpose.com
+
+PAYFAST_DEBUG=true
+
+PAYFAST_TRIAL_DAYS=30
