--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,17 @@
         }
     },
     "require": {
-        "php": "^8.0",
-        "symfony/dotenv": "^5.3",
-        "illuminate/contracts": "^8.37",
+        "php": "^8.1",
+        "symfony/dotenv": "^5.3",        
         "guzzlehttp/guzzle": "^7.4.5",
         "livewire/livewire": "^2.8",
         "moneyphp/money": "^4.0",
-        "spatie/ray": "^1.34"
+        "spatie/ray": "^1.34",
+        "illuminate/contracts": "^9.35",
+        "nunomaduro/collision": "^6.3"
     },
-    "require-dev": {  
-        "nunomaduro/collision": "^5.3",      
-        "orchestra/testbench": "^6.20",           
+    "require-dev": {          
+        "orchestra/testbench": "^7.10",           
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-ray": "^1.23",
         "vimeo/psalm": "^4.8"
