--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "php": "^8.1",
         "symfony/dotenv": "^5.3",        
         "guzzlehttp/guzzle": "^7.4.5",
-        "livewire/livewire": "^2.8",
+        "livewire/livewire": "^v3.0@beta",
         "moneyphp/money": "^4.0",
         "spatie/ray": "^1.34",        
         "nunomaduro/collision": "^7.0"
