--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "fintechsystems/payfast-onsite-subscriptions",
-    "description": "A Laravel service provider and Livewire bladed for PayFast subscription billing",
+    "description": "A Laravel service provider and Livewire blades for Payfast subscription billing",
     "keywords": [        
         "laravel",
         "payfast",
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "Eugene van der Merwe",
-            "email": "eugenevdm@gmail.com",
+            "email": "eugenefvdm@gmail.com",
             "role": "Developer"
         }
     ],
@@ -28,18 +28,19 @@
     },
     "require": {
         "php": "^8.1",
-        "symfony/dotenv": "^5.3",        
-        "guzzlehttp/guzzle": "^7.4.5",
+        "symfony/dotenv": "*",
         "livewire/livewire": "^v3.0@beta",
-        "moneyphp/money": "^4.0",
-        "spatie/ray": "^1.34",        
-        "nunomaduro/collision": "^7.0"
+        "moneyphp/money": "*",
+        "spatie/ray": "*",
+        "nunomaduro/collision": "*",
+        "guzzlehttp/guzzle": "*",
+        "guzzlehttp/psr7": "*"
     },
     "require-dev": {          
-        "orchestra/testbench": "^7.10",           
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.23",
-        "vimeo/psalm": "^4.8"
+        "orchestra/testbench": "8",
+        "spatie/laravel-ray": "*",
+        "vimeo/psalm": "*",
+        "phpunit/phpunit": "*"
     },
     "extra": {
         "laravel": {
