--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "FintechSystems\\PayFast\\": "src/"            
+            "FintechSystems\\Payfast\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/",
-            "FintechSystems\\PayFast\\Tests\\": "tests"
+            "FintechSystems\\Payfast\\Tests\\": "tests"
         }
     },
     "require": {
@@ -45,10 +45,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "FintechSystems\\PayFast\\PayFastServiceProvider"
+                "FintechSystems\\Payfast\\PayfastServiceProvider"
             ],
             "aliases": {
-                "payfast": "FintechSystems\\PayFast\\Facades\\PayFast"
+                "payfast": "Payfast"
             }
         }
     }
