--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: tests
 
 on:
   push:
-  pull_request:  
+  pull_request:
 
 jobs:
   tests:
@@ -12,7 +12,7 @@ jobs:
       fail-fast: true
       matrix:
         php: ['8.1']
-        laravel: [9]        
+        laravel: [9]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
@@ -39,4 +39,4 @@ jobs:
           PAYFAST_MERCHANT_ID: ${{ secrets.PAYFAST_MERCHANT_ID }}
           PAYFAST_MERCHANT_KEY: ${{ secrets.PAYFAST_MERCHANT_KEY }}
           PAYFAST_PASSPHRASE: ${{ secrets.PAYFAST_PASSPHRASE }}
-          PAYFAST_TESTMODE: ${{ secrets.PAYFAST_TESTMODE }}
+          PAYFAST_TEST_MODE: ${{ secrets.PAYFAST_TEST_MODE }}
